# diffy

./: Cargo.toml  README.md  make.sh  patch
diffy/: Cargo.toml
diffy-patch/: Cargo.toml
diffy-patch/src/: cli.rs  lib.rs  main.rs
diffy/src/: cli.rs  lib.rs  main.rs
src/: cli.rs  lib.rs  main.rs  method.rs
